<resources>
    <string name="app_name">QTranslate</string>
    <string name="input_text">Input text</string>
    <string name="trans_text">Translated text</string>
    <string name="select_engine">Select translator</string>
    <string name="cancel">Cancel</string>
    <string name="select_language">Select language</string>
    <string name="native_lang">Native language</string>
    <string name="Settings">Settings</string>
    <string name="anon">Anonymous mode</string>
    <string name="anon_summary">Requests will be completed from developer\'s proxy, so translators won\'t know your IP address and other info (translation will be really slow)</string>
    <string name="native_sum">Will be the language to translate the words selected through the context menu</string>
    <string name="translator">Translator</string>
    <string name="about">About</string>
    <string name="developer">Developer</string>
    <string name="thanks">Thanks to</string>
    <string name="no_internet">No internet connection</string>
    <string name="rate_limit">Rate limit! Try to use other provider</string>
    <string name="speech_to_text">Speech to text</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="download">Download</string>
    <string name="fallback_lang">Fallback language</string>
    <string name="fallback_sum">Will be used if input text language is same as target language</string>
    <string name="not_yet_implemented">not yet implemeted =(</string>
</resources>