<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/translator">
        <ListPreference
            android:defaultValue="en"
            android:entries="@array/entry_values"
            android:entryValues="@array/entry_values"
            android:icon="@drawable/ic_baseline_language_24"
            android:key="native"
            android:summary="@string/native_sum"
            android:title="@string/native_lang" />
        <!--        <CheckBoxPreference-->
        <!--            android:defaultValue="false"-->
        <!--            android:icon="@drawable/ic_baseline_security_24"-->
        <!--            android:key="anon"-->
        <!--            android:summary="@string/anon_summary"-->
        <!--            android:title="@string/anon" />-->
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/about">
        <Preference
            android:icon="@drawable/ic_baseline_perm_identity_24"
            app:summary="Nick C (ctwoon)"
            app:title="@string/developer" />
        <Preference
            android:icon="@drawable/ic_baseline_star_border_24"
            app:summary="DeepL, Google, Yandex &amp; ..."
            app:title="@string/thanks" />
    </PreferenceCategory>
</PreferenceScreen>